[package]
name = "libquartz"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
authors = ["Demir Yerli <mrquantumoff@protonmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[lib]
# Generate all libs available
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
rand = "0.8.5"
tokio = {version = "1.18.2", features = ["full"]}
reqwest = {version = "0.11.10", features = ["json"]}
magic-crypt = "3.1.10"
colored = "2.0.0"
futures = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"