[package]
name = "quartz"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libquartz = {path = "../libquartz"}
colored = "2.0.0"
futures = "0.3.21"
tokio = {version = "1.18.2", features = ["macros", "rt-multi-thread"]}
